# check24-best-combination-challenge

./: PROGRESS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
data/: Cargo.toml
data/src/: lib.rs  main.rs
data/testing/: bc_game_test.csv  bc_streaming_offer_test.csv  bc_streaming_package_test.csv
src-rust/: Cargo.toml
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/benches/: bench_core.rs
src-rust/crates/core/src/: algo.rs  data.rs  lib.rs  main.rs
src-rust/crates/core/tests/: test_core.rs
src-rust/crates/tauri/: Cargo.toml  tauri.conf.json
src-rust/crates/tauri/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: best-combination.rs  best_combination_bench.rs
src-tauri/src/: lib.rs  main.rs  parser.rs
src-tauri/tests/: best-combination.rs  best_combination_test.rs
src/lib/: enums.ts  generate_enums.py  generated_types.ts  types.ts
src/lib/components/ui/: VirtualList.svelte
src/routes/: +page.svelte
