[package]
name = "best-combination-data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.92"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
fehler = "1.0.0"
smol_str = { version = "0.3.2", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
serde_json = "1.0.132"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["full"] }
index_vec = { version = "0.1.4", features = ["serde"] }
