[package]
name = "best-combination"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "best_combination_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.92"
chrono = { version = "0.4.38", features = ["serde"] }
fehler = "1.0.0"
smol_str = { version = "0.3.2", features = ["serde"] }
betting-game-data = { path = "../data" }
itertools = "0.13.0"
index_vec = "0.1.4"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
tango-bench = { version = "0.6" }

[profile.dev.package]
insta.opt-level = 3

[[bench]]
name = "best_combination_bench"
harness = false
