[package]
name = "best_combination_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.92"
csv = "1.3.0"
fehler = "1.0.0"
smol_str = { version = "0.3.2", features = ["serde"] }
itertools = "0.13.0"
serde_json = "1.0.132"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["full"] }
index_vec = { version = "0.1.4", features = ["serde"] }
argh = "0.1.13"
wide = "0.7.30"
arrayvec = "0.7.6"
fixedbitset = "0.5.7"
num-traits = "0.2.19"
rayon = "1.10.0"
time = { version = "0.3.37", features = [
    "macros",
    "parsing",
    "serde",
    "serde-human-readable",
] }

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
tango-bench = { version = "0.6" }


[[bench]]
name = "bench_core"
harness = false
